fix: editorView was behind

--- a/src/css/region.scss
+++ b/src/css/region.scss
@@ -7,7 +7,6 @@
 .inner {
   flex: 1 0 50%;
   width: 50%;
-  background-color: $backgroundColor;
   position: relative;
 }
 
@@ -63,6 +62,7 @@
 .outer {
   flex: 1;
   overflow: hidden;
+  background-color: $backgroundColor;
 }
 
 // 出力結果表示領域
@@ -71,7 +71,6 @@
   flex: 0 1 50%;
   width: 50%;
   padding: 16px 16px $footerHeight + 8px 8px;
-  background-color: $backgroundColor;
   z-index: 1;
 
   iframe {
